fix(scss): improve breakpoint-min function for better readability

--- a/src/sass/formkit-primevue.scss
+++ b/src/sass/formkit-primevue.scss
@@ -14,7 +14,11 @@ $grid-breakpoints: (
 
 @function breakpoint-min($name, $breakpoints: $grid-breakpoints) {
   $min: map.get($breakpoints, $name);
-  @return if($min != 0, $min, null);
+  @if $min != 0 {
+    @return $min;
+  } @else {
+    @return null;
+  }
 }
 
 @mixin media-breakpoint-up($name, $breakpoints: $grid-breakpoints) {
